fixed UI alignments, need to fix the right side drawer on < 1024px

--- a/src/App.scss
+++ b/src/App.scss
@@ -604,8 +604,8 @@ body {
     transition: all 0.3s;
     position: absolute;
     z-index: 999;
-    width: 100%;
     height: 100%;
+    // width: 30%;
     transform: translate(-100%, 0);
   }
 
