--- a/src/scss/smallAlignments.scss
+++ b/src/scss/smallAlignments.scss
@@ -41,6 +41,9 @@
   .col-xl-3-5 {
     width: 40%;
   }
+  .newChatActiveBox {
+    width: 40%;
+  }
 
   .col-xl-6-5 {
     width: 60%;
@@ -51,7 +54,9 @@
   .col-xl-3-5 {
     width: 35%;
   }
-
+  .newChatActiveBox {
+    width: 35%;
+  }
   .col-xl-6-5 {
     width: 65%;
   }
@@ -61,7 +66,9 @@
   .col-xl-3-5 {
     width: 30%;
   }
-
+  .newChatActiveBox {
+    width: 30%;
+  }
   .col-xl-6-5 {
     width: 70%;
   }
@@ -71,6 +78,10 @@
   .DOMChangedLeftSide {
     width: 30% !important;
   }
+  .DOMChangedLeftHiddenSide {
+    width: 30% !important;
+  }
+
   .DOMChangedRightSide {
     width: 40% !important;
   }
@@ -80,6 +91,10 @@
   .DOMChangedLeftSide_P-1301 {
     width: 25% !important;
   }
+  .DOMChangedLeftHiddenSide {
+    width: 25% !important;
+  }
+
   .DOMChangedRightSide_P-1301 {
     width: 45% !important;
   }
